# CyberpunkModManager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CyberpunkModManager.sln  LICENSE.txt  README.md  Setup.ps1
.github/workflows/: build-check.yml  msbuild.yml  release.yml
App/: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  MakeRelease.ps1
App/Markup/: Common.kui  ModEntry.kui  ModInfoWindow.kui  ModOptions.kui  ModSetup.kui  ProfileWindow.kui  Settings.kui  SetupWindow.kui  Sidebar.kui
App/Source/: BackgroundTask.cpp  BackgroundTask.h  DownloadHandler.cpp  DownloadHandler.h  Error.cpp  Error.h  InstallerUpdate.cpp  InstallerUpdate.h  UriParse.cpp  UriParse.h  Webp.cpp  Webp.h  WindowsFunctions.cpp  WindowsFunctions.h  main.cpp
App/Source/Markup/: AppButton.hpp  CheckBox.hpp  ModEntry.hpp  ModHeader.hpp  ModInfoButton.hpp  ModInfoHeader.hpp  ModInfoWindowElement.hpp  ModOption.hpp  NewProfileBox.hpp  ProfileButton.hpp  ProfileEntry.hpp  Separator.hpp  SettingsElement.hpp  SetupFooter.hpp  SetupOption.hpp  SetupWindowElement.hpp  SidebarButton.hpp  SidebarElement.hpp  SidebarTooltip.hpp
App/Source/UI/: FOMODInstall.cpp  FOMODInstall.h  LoadingBar.cpp  LoadingBar.h  ModInfoWindow.cpp  ModInfoWindow.h  ModOptionSelection.cpp  ModOptionSelection.h  Popup.cpp  Popup.h  ProfileWindow.cpp  ProfileWindow.h  SetupWindow.cpp  SetupWindow.h  Sidebar.cpp  Sidebar.h  TitleBar.cpp  TitleBar.h  UI.cpp  UI.h
App/Source/UI/Tabs/: AppTab.cpp  AppTab.h  HomeTab.cpp  HomeTab.h  InstalledModsTab.cpp  InstalledModsTab.h  ModBrowserTab.cpp  ModBrowserTab.h  ModListTab.cpp  ModListTab.h  SettingsTab.cpp  SettingsTab.h
App/app/: CyberpunkModManager.desktop
App/ui/: Common.kui  HomeTab.kui  ModEntry.kui  ModInfoWindow.kui  ModOptions.kui  ModSetup.kui  ProfileWindow.kui  Sidebar.kui  TitleBar.kui
Dependencies/: 7z2405-linux-x64.tar.xz.1  get-7zip-linux.sh  wget-log
ModManagerLib/: CMakeLists.txt  ModManagerLib.vcxproj  ModManagerLib.vcxproj.filters
ModManagerLib/Include/: Archive.h  FOMOD.h  FileUtil.h  Game.h  GithubAPI.h  ModInfo.h  Net.h  NexusModsAPI.h  ParsePE.h  Profile.h  SettingsManager.h  StrUtil.h
ModManagerLib/Source/: Archive.cpp  FOMOD.cpp  FileUtil.cpp  Game.cpp  GithubAPI.cpp  ModInfo.cpp  Net.cpp  NexusModsAPI.cpp  Profile.cpp  SettingsManager.cpp  StrUtil.cpp
ModManagerLib/Source/miniz/: miniz.cpp
